srvc-home-timeline/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tinyx-home-timeline
  namespace: tinyx
spec:
  selector:
    app: tinyx-home-timeline
  ports:
    - name: http
      port: 9003
      targetPort: 9003
      protocol: TCP
