srvc-home-timeline/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-timeline
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: tinyx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /srvc-home-timeline(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tinyx-home-timeline
                port:
                  number: 9003
